syntax = "proto3";

package chain;

option go_package = "github.com/jmsadair/keychainDB/proto/chain";

import "proto/storage/storage.proto";

// ChainService is used by nodes within a chain to communicate with one another.
service ChainService {
	// Replicate handles requests to replicate a key-value pair.
	rpc Replicate (ReplicateRequest) returns (ReplicateResponse) {}
	// Write handles requests to write a particular version of a key.
	rpc Write (WriteRequest) returns (WriteResponse) {}
	// Read handles requests to read a particular version of a key.
	rpc Read (ReadRequest) returns (ReadResponse) {}
	// Commit handles requests to commit a particular version of a key.
	rpc Commit(CommitRequest) returns (CommitResponse) {}
	// Propagate handles requests to list all key-value pairs that match the specified criterion.
	// This is useful when a new node is added to chain and needs to receive all of the key-value pairs it is missing.
	rpc Propagate (PropagateRequest) returns (stream storage.KeyValuePair) {}
	// UpdateConfiguration handles requests to update the chain membership configuration.
	rpc UpdateConfiguration (UpdateConfigurationRequest) returns (UpdateConfigurationResponse) {}
	// Ping handles requests to check if the node is alive.
	rpc Ping (PingRequest) returns (PingResponse) {}
}

// ChainMember represents a member of the chain with an ID and address.
message ChainMember {
	string id = 1;
	string address = 2;
}

// Configuration contains the membership configuration of the chain.
message Configuration {
	uint64 version = 1;
	repeated ChainMember members = 2;
}

// UpdateConfigurationRequest is a request for a node to update its chain membership configuration.
message UpdateConfigurationRequest {
	Configuration configuration = 1;
}

// UpdateConfigurationResponse is a response to a UpdateConfigurationRequest.
message UpdateConfigurationResponse {}

// ReplicateRequest is a request sent to the head of a chain to initiate replication of a key-value pair.
message ReplicateRequest {
	string key = 1;
	bytes value = 2;
	uint64 config_version = 3;
}

// ReplicateResponse is a response to a ReplicateRequest.
message ReplicateResponse {}

// WriteRequest is a request sent from one node of a chain to another to write a new version of a key.
message WriteRequest {
	string key = 1;
	bytes value = 2;
	uint64 version = 3;
	uint64 config_version = 4;
}

// WriteResponse is the response to a WriteRequest.
message WriteResponse {}

// ReadRequest is a request sent from one node of chain to another to read the value of a key.
message ReadRequest {
	string key = 1;
	uint64 config_version = 2;
	bool forwarded = 3;
}

// ReadResponse is the response to a ReadRequest and contains the value of the key read.
message ReadResponse {
	bytes value = 1;
}

// PropagateRequest is used to initiate a server-to-client stream of key-value pairs.
message PropagateRequest {
	storage.KeyType key_type = 1;
	uint64 config_version = 2;
}

// CommitRequest is a request to commit a version of a key.
message CommitRequest {
	string key = 1;
	uint64 version = 2;
	uint64 config_version = 3;
}

// CommitResponse is a response to a CommitRequest.
message CommitResponse {}

// PingRequest is a request to check if the node is alive and has an up-to-date configuration.
message PingRequest {}

// PingResponse is a response to a PingRequest.
message PingResponse {
	uint64 config_version = 1;
	int32 status = 2;
}
